@@ -5,9 +5,8 @@ gitpython>=3.1.33; python_version>='3.8'
 --only-binary numpy==1.21.4; python_version>='3.8'
 --only-binary scipy==1.7.3; python_version>='3.8'
 pytidylib==0.3.2
-simplejson==3.16.0
-six==1.14.0
-pyfunnel==1.0.3
+
+pyfunnel==2.0.1
 PyYAML==6.0.1
 cerberus==1.3.4
 
